--- a/header.css
+++ b/header.css
@@ -8,7 +8,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 2rem;
+  padding: 0;
   background-color: #e9e5e1;
 }
 
