--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* Mine fonte */
 @font-face {
   font-family: "bunge";
   src: url(fonte/Bungee-Regular.ttf);
@@ -10,7 +11,16 @@
   font-family: "work";
   src: url(fonte/WorkSans-Regular.ttf);
 }
+@font-face {
+  font-family: "work-tynd";
+  src: url(fonte/WorkSans-Regular.ttf);
+}
 
+/* Primær
+Sekundær
+tredje farve */
+
+/* Lidt general styling */
 img {
   max-width: 100%;
 }
@@ -19,7 +29,7 @@ body {
   background-color: #b1cfd7;
 }
 
-/* ALLE OVERSKRIFTER MED BORDEAUX BAGGRUND */
+/* h2 = mine overskrifter med tydelig baggrund  */
 h2 {
   color: white;
   background-color: #742921;
@@ -29,27 +39,76 @@ h2 {
   font-size: x-large;
 }
 
+p {
+  color: #742921;
+  font-family: "work-tynd";
+}
+
 h3 {
   color: #742921;
   text-align: center;
-  font-family: "work";
+  font-family: "mont";
 }
 
 h5 {
   color: #742921;
-  font-family: "work";
+  font-family: "mont";
   text-align: center;
   margin: 10px;
 }
 
-/* min forside/hero section */
+/* MOBIL FIIIIIIRRRRRRSSSTTTT */
+/* Husk nu E alt herfra og ind til @me gælder KUN op til og med 768px bredde:) */
+
+/* FORSIDE - MOBIL */
+/* min hero section */
 .hero {
   background-color: white;
   padding: 5rem;
   text-align: center;
 }
 
-/* jeg styler mine kasser på om mig */
+/* Mine site bokse styles og sættes i grid */
+.bokse {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 1rem;
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 1rem;
+}
+a.boks {
+  display: block;
+  background-color: #742921;
+  color: white;
+  text-align: center;
+  padding: 3rem;
+  margin-left: 50px;
+  margin-right: 50px;
+  border-radius: 10px;
+  font-family: "work";
+  text-decoration: none;
+}
+
+/* OM MIG - MOBIL*/
+/* MIT KÆMÆÆÆPE NAVN */
+h5 {
+  color: #742921;
+  font-family: "mont";
+  text-align: center;
+  font-size: 60px;
+}
+
+/* Jeg styler mine kasser på OM MIG */
+.kasser {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  margin-left: 60px;
+  margin-right: 60px;
+  margin-bottom: 20px;
+  justify-content: center;
+}
 .kasse {
   background-color: #e9e5e1;
   color: #742921;
@@ -58,9 +117,21 @@ h5 {
   padding-left: 2px;
   padding-right: 2px;
 }
+.kasser a {
+  display: flex;
+  justify-content: center;
+}
 
+.temaer {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  margin: 100px;
+  gap: 100px;
+}
+
+/* PROJEKTER - MOBIL */
 /* jeg styler mine tema kasser i projekter */
-.tema a {
+.tema {
   text-decoration: none;
   background-color: #742921;
   color: white;
@@ -70,22 +141,100 @@ h5 {
   font-family: "work";
   font-size: large;
   max-width: 20%;
+  justify-self: center;
 }
-.tema {
-  max-width: 50%;
-}
-
-/* jeg styler mine knapper */
-
-.btn {
-  display: inline-block;
-  background-color: white;
-  color: #742921;
+.tema a {
   text-decoration: none;
-  padding: 1rem;
-  font-family: "work";
-  border-radius: 1rem;
-  box-shadow: 5px 5px 5px grey;
-  outline: solid 2px #742921;
+  color: white;
   text-align: center;
+  font-family: "work";
+  font-size: large;
+}
+
+/* DESKTOP VERSION MED MEDIA */
+
+@media (min-width: 768px) {
+  /* FORSIDE - desktop */
+
+  /* Jeg sætter mine bokse på forsiden i grid */
+  .bokse {
+    /* display: grid; */
+    grid-template-columns: 1fr 1fr;
+  }
+  /* Jeg sætter mine bokse på forsiden i grid til desktop version */
+  .bokse {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1rem;
+    max-width: 600px;
+    margin: 0 auto;
+    padding: 1rem;
+  }
+  a.boks {
+    display: block;
+    background-color: #742921;
+    color: white;
+    text-align: center;
+    padding: 3rem;
+    margin-left: 50px;
+    margin-right: 50px;
+    border-radius: 10px;
+    font-family: "work";
+    text-decoration: none;
+  }
+
+  /* OM MIG - desktop */
+  /* "Hvem er jeg" grid_2-1 section - på "OM MIG" */
+  .grid_2-1 {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    text-align: center;
+  }
+
+  /* Mit kæææmpe navn på om mig*/
+  h5 {
+    font-size: 100px;
+  }
+
+  /* Jeg styler mine kasser på om mig */
+  .kasser {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-bottom: 10px;
+  }
+  /* en smutter, muligvis billede af mig på om mig */
+  .mig {
+    width: 100%;
+  }
+
+  /* Projekt - desktop */
+  /* Mine temaer på projekt siden ændres i grid */
+  .temaer {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    align-items: center;
+    gap: 20px;
+    text-align: center;
+  }
+
+  /* KNAPPER */
+  .btn {
+    display: inline-block;
+    background-color: white;
+    color: #742921;
+    text-decoration: none;
+    padding: 1rem;
+    font-family: "mont";
+    border-radius: 1rem;
+    box-shadow: 5px 5px 5px grey;
+    outline: solid 2px #742921;
+    text-align: center;
+  }
+  /* Min knap centrerer sig i midten under mine to kasser OM MIG */
+  .btn3 {
+    display: flex;
+    justify-content: center;
+    padding: 15px;
+  }
 }
