--- a/header.css
+++ b/header.css
@@ -22,6 +22,7 @@ ul {
   display: flex;
   list-style-type: none;
   gap: 2rem;
+  padding-right: 2rem;
 }
 
 ul li a {
@@ -60,14 +61,20 @@ ul li a {
     flex-direction: column;
     gap: 1rem;
     margin-top: 1rem;
+    align-items: flex-end;
+    /* virker kun indenfor containterens bredde? derfor den drillede måske */
+    text-align: right;
+    width: 100%;
+    padding-right: 4rem;
   }
   /* menuen vises med active */
   #nav-links.active {
     display: flex;
   }
+
   .menubar {
     /* overvej skift til row, logo fylder for meget */
+
     flex-direction: column;
-    align-items: flex-start;
   }
 }
