--- a/style.css
+++ b/style.css
@@ -26,13 +26,14 @@ img {
 }
 
 body {
-  background-color: #b1cfd7;
+  background-color: #f7f3e2;
+  margin: 0;
 }
 
 /* h2 = mine overskrifter med tydelig baggrund  */
 h2 {
-  color: white;
-  background-color: #742921;
+  color: #009844;
+  /* background-color: #742921; */
   padding: 1.5rem;
   text-align: center;
   font-family: "work";
@@ -45,16 +46,17 @@ p {
 }
 
 h3 {
-  color: #742921;
+  color: #009844;
   text-align: center;
   font-family: "mont";
 }
 
 h5 {
-  color: #742921;
+  color: #f35197;
   font-family: "mont";
   text-align: center;
   margin: 10px;
+  font-size: 45px;
 }
 
 /* MOBIL FIIIIIIRRRRRRSSSTTTT */
@@ -64,7 +66,7 @@ h5 {
 /* min hero section */
 .hero {
   background-color: white;
-  padding: 5rem;
+  padding: 10rem;
   text-align: center;
 }
 
@@ -83,74 +85,118 @@ a.boks {
   color: white;
   text-align: center;
   padding: 3rem;
-  margin-left: 50px;
-  margin-right: 50px;
+  margin-left: 80px;
+  margin-right: 80px;
   border-radius: 10px;
   font-family: "work";
   text-decoration: none;
 }
 
+.hvemerjeg {
+  display: grid;
+  grid-template-columns: 1fr;
+  text-align: center;
+  padding-bottom: 50px;
+  background-color: #f35197;
+}
+/* skubber knap i bund */
+.mellemrum {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: left;
+}
+/* styler mine 5 hurtige */
+.mellemrum li {
+  color: #f7f3e2;
+  /* margin: 0 auto; */
+  font-size: large;
+  font-family: "worktynd";
+  align-items: left;
+}
+
+.hvemerjeg img {
+  margin-top: 30px;
+  max-width: 50%;
+  border-radius: 20px;
+}
+
 /* mine under overskrifter i article, efter fx ux/ul */
 h4 {
-  color: #742921;
+  color: #f35197;
   font-family: "mont";
   text-align: center;
   font-size: 20px;
 }
 
-/* OM MIG - MOBIL*/
-/* MIT KÆMÆÆÆPE NAVN */
-h5 {
-  color: #742921;
-  font-family: "mont";
-  text-align: center;
-  font-size: 60px;
+/* OM MIG */
+/* min billerække på om mig */
+.billederække {
+  display: grid;
+  grid-template-columns: 1fr;
+  place-items: center;
+}
+.billederække img {
+  max-width: 100%;
+}
+.mig img {
+  max-width: 60%;
+  margin: 10px;
+  border-radius: 280px;
+}
+.grid_2-1 {
+  margin-left: 10px;
+  padding-left: 10px;
+}
+/* MIN CV SEKTION */
+.cv {
+  font-family: "work";
+  color: #f35197;
+  padding: 20px;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+.cv h2 {
+  text-align: start;
 }
 
-/* Jeg styler mine kasser på OM MIG */
-.kasser {
-  display: flex;
-  flex-direction: column;
-  gap: 30px;
-  margin-left: 60px;
-  margin-right: 60px;
-  margin-bottom: 20px;
-  justify-content: center;
+/* laver streg under/inddeler */
+details {
+  border-bottom: 2px solid #f35197;
+  padding: 10px;
 }
-.kasse {
-  background-color: #e9e5e1;
-  color: #742921;
-  text-align: center;
-  border-radius: 10px;
-  padding-left: 2px;
-  padding-right: 2px;
-}
-.kasser a {
-  display: flex;
-  justify-content: center;
-}
+summary
+
+/* PROJEKTER - MOBIL */
+/* jeg styler mine tema kasser i projekter */
 
 .temaer {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  margin: 100px;
-  gap: 100px;
+  margin: 50px;
+  gap: 50px;
+  text-align: center;
 }
 
-/* PROJEKTER - MOBIL */
-/* jeg styler mine tema kasser i projekter */
 .tema {
   text-decoration: none;
-  background-color: #742921;
+  background-color: #fe7f41;
   color: white;
   text-align: center;
   border-radius: 10px;
   padding: 40px;
   font-family: "work";
   font-size: large;
-  max-width: 20%;
+  max-width: 15%;
   justify-self: center;
+
+  /* tilføjer dette for centreret tekst i midten, text-align centrerer horisontalt, så jeg mangler lodret inde centrerings */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
+
 .tema a {
   text-decoration: none;
   color: white;
@@ -162,14 +208,13 @@ h5 {
 /* KNAPPER */
 .btn {
   display: inline-block;
-  background-color: white;
-  color: #742921;
+  background-color: #f7f3e2;
+  color: #f35197;
   text-decoration: none;
-  padding: 1rem;
+  padding: 10px;
   font-family: "mont";
   border-radius: 1rem;
   box-shadow: 5px 5px 5px grey;
-  outline: solid 2px #742921;
   text-align: center;
 }
 /* Min knap centrerer sig i midten under mine to kasser OM MIG */
@@ -193,7 +238,6 @@ h5 {
   margin-bottom: 1.2rem;
   line-height: 1.6;
 }
-h4
 
 /* DESKTOP VERSION MED MEDIA */
 
@@ -216,7 +260,7 @@ h4
   }
   a.boks {
     display: block;
-    background-color: #742921;
+    background-color: #fe7f41;
     color: white;
     text-align: center;
     padding: 3rem;
@@ -226,6 +270,21 @@ h4
     font-family: "work";
     text-decoration: none;
   }
+  .hvemerjeg {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    text-align: center;
+  }
+  /* skubber knap i bund */
+  .mellemrum {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .hvemerjeg img {
+    max-width: 50%;
+  }
 
   /* OM MIG - desktop */
   /* "Hvem er jeg" grid_2-1 section - på "OM MIG" */
@@ -233,6 +292,9 @@ h4
     display: grid;
     grid-template-columns: 2fr 1fr;
     text-align: center;
+    padding-top: 30px;
+    margin-left: 100px;
+    margin-right: 20px;
   }
 
   /* Mit kæææmpe navn på om mig*/
@@ -240,25 +302,34 @@ h4
     font-size: 100px;
   }
 
-  /* Jeg styler mine kasser på om mig */
-  .kasser {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    margin-bottom: 10px;
+  /* MIN CV SEKTION */
+  .cv {
+    font-family: "work";
+    color: #f35197;
+    padding: 20px;
+    margin-left: 80px;
+    margin-right: 80px;
   }
-  /* en smutter, muligvis billede af mig på om mig */
-  .mig {
-    width: 100%;
+
+  /* min billerække på om mig */
+  .billederække {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    place-items: center;
+  }
+  .billederække img {
+    max-width: 100%;
   }
 
   /* Projekt - desktop */
   /* Mine temaer på projekt siden ændres i grid */
+
   .temaer {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     align-items: center;
-    gap: 20px;
+    gap: 50px;
+    margin: 0;
     text-align: center;
   }
 }
