--- a/header.css
+++ b/header.css
@@ -1,7 +1,7 @@
 /* Jeg styler min header så den ser pæn ud */
 @font-face {
-  font-family: "work";
-  src: url(fonte/Montserrat-ExtraBold.ttf);
+  font-family: "pop";
+  src: url(fonte/Poppins-SemiBold.ttf);
 }
 
 /* jeg får mit logo til at slide in */
@@ -21,8 +21,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0;
-  margin: 1rem;
+  padding: 2;
+  margin: 1.5rem;
   background-color: #f7f3e2;
 }
 
@@ -35,10 +35,13 @@ ul {
 
 ul li a {
   text-decoration: none;
-  font-family: "work";
+  font-family: "pop";
+  font-size: large;
+  font-weight: bold;
   color: #009844;
   transition: all 0.3s ease-out;
 }
+
 ul li a:hover {
   color: #f35197;
 }
@@ -46,8 +49,8 @@ ul li a:hover {
 /* Logo */
 /* jeg tilpasser mit logo mangler */
 .logo img {
-  max-width: 15%;
-  margin: 10px;
+  max-width: 10%;
+  margin: 20px;
   margin-left: 20px;
 }
 
@@ -87,6 +90,6 @@ ul li a:hover {
     align-items: center;
   }
   .logo img {
-    max-width: 12%;
+    max-width: 10%;
   }
 }
