--- a/style.css
+++ b/style.css
@@ -164,9 +164,12 @@ a.boks {
   display: grid;
   grid-template-columns: 1fr;
   place-items: center;
+  gap: 40px;
+  margin: 40px;
 }
 .billederække img {
-  max-width: 100%;
+  max-width: 80%;
+  border-radius: 10px;
 }
 
 .mig img {
